--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "nanoid": "^5.1.6",
     "negotiator": "^1.0.0",
     "next": "15.2.8",
+    "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "query-string": "^9.3.1",
     "react": "^19.0.0",
