--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.1",
+    "react-resizable-panels": "^4.4.1",
     "sonner": "^2.0.7",
     "svix": "^1.81.0",
     "tailwind-merge": "^3.3.1",
