--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cmdk": "^1.1.1",
     "concurrently": "^9.2.1",
     "convex": "^1.28.2",
+    "convex-helpers": "^0.1.111",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.7.0",
@@ -81,6 +82,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.1",
     "react-resizable-panels": "^4.4.1",
+    "remove-accents": "^0.5.0",
     "sonner": "^2.0.7",
     "svix": "^1.81.0",
     "tailwind-merge": "^3.3.1",
