--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@formatjs/intl-localematcher": "^0.6.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -66,6 +68,7 @@
     "convex-helpers": "^0.1.111",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "emoji-mart": "^5.6.0",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
