--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "query-string": "^9.3.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
