--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@auth/core": "0.37.0",
     "@clerk/localizations": "^3.28.2",
     "@clerk/nextjs": "^6.35.2",
+    "@clerk/themes": "^2.4.51",
     "@convex-dev/auth": "^0.0.90",
     "@convex-dev/eslint-plugin": "^1.1.1",
+    "@convex-dev/rate-limiter": "^0.3.2",
     "@convex-dev/react-query": "^0.1.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
